--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
       <artifactId>java-cup-runtime</artifactId>
       <version>11b</version>
     </dependency>
+      <dependency>
+          <groupId>com.github.vbmacher</groupId>
+          <artifactId>java-cup</artifactId>
+          <version>11b-20160615-2</version>
+      </dependency>
   </dependencies>
 
   <build>
